# experiments

cicue/: README.md  template.sh
cicue/pipeline/: ci.yaml  pipeline.cue  pipeline.yaml
cicue/pipeline/lib/: ci.cue  generic.cue
nixos-init/: Cargo.toml
nixos-init/metadata/latest/meta-data/: hostname
nixos-init/metadata/latest/meta-data/public-keys/: index.html
nixos-init/metadata/latest/meta-data/public-keys/0/: openssh-key
nixos-init/src/: main.rs
openstack/: default.nix  pyproject.toml
pres-nix-build-artifact/: 0-evaluation.nix  1-derivation.nix  2-mk-derivation.nix  3-run-command.nix  4-path-allocation.nix  5-fixed-output-derivation.nix  6-fetcher.nix  7-nixpkgs-pinned.nix  8-python-package.nix  9-docker-image.nix  builder.sh  readme.md
qobuz/: package-lock.json  qobuz.js
