[tool.poetry]
name = "openstack"
version = "0.1.0"
description = ""
authors = ["Antoine Eiche <lewo@abesis.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
aodhclient = "2.2.0"
appdirs = "1.4.4"
attrs = "20.3.0"
Babel = "2.9.0"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
cliff = "3.7.0"
cmd2 = "1.5.0"
colorama = "0.4.4"
cryptography = "3.4.6"
debtcollector = "2.2.0"
decorator = "4.4.2"
docker = "4.4.4"
"dogpile.cache" = "1.1.2"
fasteners = "0.16"
futurist = "2.3.0"
gnocchiclient = "7.0.7"
idna = "2.10"
iso8601 = "0.1.14"
jmespath = "0.10.0"
jsonpatch = "1.32"
jsonpointer = "2.1"
jsonschema = "3.2.0"
keystoneauth1 = "4.3.1"
monotonic = "1.5"
msgpack = "1.0.2"
munch = "2.5.0"
murano-pkg-check = "0.3.0"
netaddr = "0.8.0"
netifaces = "0.10.9"
networkx = "2.5"
openstackclient = "4.0.0"
openstacksdk = "0.55.0"
os-client-config = "2.1.0"
os-service-types = "1.7.0"
osc-lib = "2.3.1"
"oslo.concurrency" = "4.4.0"
"oslo.config" = "8.5.0"
"oslo.context" = "3.2.0"
"oslo.i18n" = "5.0.1"
"oslo.log" = "4.4.0"
"oslo.serialization" = "4.1.0"
"oslo.utils" = "4.8.0"
osprofiler = "3.4.0"
packaging = "20.9"
pbr = "5.5.1"
ply = "3.11"
prettytable = "0.7.2"
pycparser = "2.20"
pydot = "1.4.2"
pyinotify = "0.9.6"
pyOpenSSL = "20.0.1"
pyparsing = "2.4.7"
pyperclip = "1.8.2"
pyrsistent = "0.17.3"
python-barbicanclient = "5.1.0"
python-cinderclient = "7.4.0"
python-congressclient = "2.0.1"
python-dateutil = "2.8.1"
python-designateclient = "4.2.0"
python-glanceclient = "3.3.0"
python-heatclient = "2.3.0"
python-ironic-inspector-client = "4.5.0"
python-ironicclient = "4.6.1"
python-keystoneclient = "4.2.0"
python-mistralclient = "4.2.0"
python-muranoclient = "2.2.0"
python-neutronclient = "7.3.0"
python-novaclient = "17.4.0"
python-octaviaclient = "2.3.0"
python-openstackclient = "5.4.0"
python-saharaclient = "3.3.0"
python-searchlightclient = "2.1.1"
python-senlinclient = "2.2.1"
python-swiftclient = "3.11.1"
python-troveclient = "7.0.0"
python-vitrageclient = "4.3.0"
python-watcherclient = "3.2.0"
python-zaqarclient = "2.1.0"
python-zunclient = "4.2.0"
pytz = "2021.1"
PyYAML = "5.4.1"
requests = "2.25.1"
requestsexceptions = "1.4.0"
rfc3986 = "1.4.0"
semantic-version = "2.8.5"
simplejson = "3.17.2"
six = "1.15.0"
stevedore = "3.3.0"
ujson = "4.0.2"
urllib3 = "1.26.4"
warlock = "1.3.3"
wcwidth = "0.2.5"
WebOb = "1.8.7"
websocket-client = "0.58.0"
wrapt = "1.12.1"
yaql = "1.1.3"

setuptools_rust = "0.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
